--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -2,7 +2,7 @@
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.Channel-3\#ChannelInjectedConversion=ADC_CHANNEL_11
 ADC1.Channel-4\#ChannelInjectedConversion=ADC_CHANNEL_12
-ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T5_CC4
+ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T5_TRGO
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,InjectedRank-3\#ChannelInjectedConversion,Channel-3\#ChannelInjectedConversion,SamplingTime-3\#ChannelInjectedConversion,InjectedOffset-3\#ChannelInjectedConversion,InjectedRank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,InjNumberOfConversion,ExternalTrigInjecConv
 ADC1.InjNumberOfConversion=2
 ADC1.InjectedOffset-3\#ChannelInjectedConversion=0
@@ -13,8 +13,8 @@ ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES
-ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_56CYCLES
+ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.master=1
 CAD.formats=[]
 CAD.pinconfig=Dual
@@ -67,7 +67,7 @@ Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,Queues01
 FREERTOS.Queues01=uartQueue,128,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,55,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFCapture,24,512,TofTask,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,41,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL;AdcCapture,8,256,AdcCaptureFunc,Default,NULL,Dynamic,NULL,NULL;CarControlTask,32,256,CarControlTaskFunc,Default,NULL,Dynamic,NULL,NULL;GyroTask,25,256,GyroTaskFunc,Default,NULL,Dynamic,NULL,NULL;TrackTask,28,256,TrackTaskFunc,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,55,386,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ToFCapture,24,512,TofTask,Default,NULL,Dynamic,NULL,NULL;UartTask,8,512,UartTaskFunc,Default,NULL,Dynamic,NULL,NULL;MotorSpeedTask,41,256,MotorSpeedTaskFunc,Default,NULL,Dynamic,NULL,NULL;AdcCapture,8,512,AdcCaptureFunc,Default,NULL,Dynamic,NULL,NULL;CarControlTask,32,256,CarControlTaskFunc,Default,NULL,Dynamic,NULL,NULL;GyroTask,25,256,GyroTaskFunc,Default,NULL,Dynamic,NULL,NULL;TrackTask,28,256,TrackTaskFunc,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -79,9 +79,10 @@ Mcu.IP1=DMA
 Mcu.IP10=TIM2
 Mcu.IP11=TIM3
 Mcu.IP12=TIM4
-Mcu.IP13=TIM9
-Mcu.IP14=USART2
-Mcu.IP15=USART6
+Mcu.IP13=TIM5
+Mcu.IP14=TIM9
+Mcu.IP15=USART2
+Mcu.IP16=USART6
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
@@ -90,51 +91,55 @@ Mcu.IP6=SPI1
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin15=PB0
-Mcu.Pin16=PB1
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PB15
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
 Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin20=PC6
-Mcu.Pin21=PC7
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PA15
-Mcu.Pin28=PC10
-Mcu.Pin29=PC11
+Mcu.Pin20=PB15
+Mcu.Pin21=PC6
+Mcu.Pin22=PC7
+Mcu.Pin23=PC8
+Mcu.Pin24=PC9
+Mcu.Pin25=PA8
+Mcu.Pin26=PA9
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
 Mcu.Pin3=PC0
-Mcu.Pin30=PC12
-Mcu.Pin31=PD2
-Mcu.Pin32=PB3
-Mcu.Pin33=PB4
-Mcu.Pin34=PB6
-Mcu.Pin35=PB7
-Mcu.Pin36=PB8
-Mcu.Pin37=PB9
-Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin39=VP_SYS_VS_tim11
+Mcu.Pin30=PA15
+Mcu.Pin31=PC10
+Mcu.Pin32=PC11
+Mcu.Pin33=PC12
+Mcu.Pin34=PD2
+Mcu.Pin35=PB3
+Mcu.Pin36=PB4
+Mcu.Pin37=PB6
+Mcu.Pin38=PB7
+Mcu.Pin39=PB8
 Mcu.Pin4=PC1
-Mcu.Pin40=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin40=PB9
+Mcu.Pin41=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin42=VP_SYS_VS_tim11
+Mcu.Pin43=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin5=PC2
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=41
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RBTx
@@ -146,6 +151,9 @@ NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -176,14 +184,20 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.GPIOParameters=GPIO_Label
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA15.GPIO_Label=ADC_DRDY
+PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA15.GPIO_PuPd=GPIO_PULLUP
 PA15.Locked=true
 PA15.Signal=GPXTI15
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=ICM_INT
+PA4.Locked=true
+PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=ICM_SCLK
 PA5.Mode=Full_Duplex_Master
@@ -265,11 +279,13 @@ PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=IOUT_2
 PC2.Locked=true
 PC2.Signal=ADCx_IN12
-PC4.GPIOParameters=GPIO_Label
+PC4.GPIOParameters=PinState,GPIO_Label
 PC4.GPIO_Label=ICM_CS
+PC4.PinState=GPIO_PIN_SET
 PC4.Signal=GPIO_Output
-PC5.GPIOParameters=GPIO_Label
+PC5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC5.GPIO_Label=TOF_DRDY
+PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC5.Locked=true
 PC5.Signal=GPXTI5
 PC6.Mode=Asynchronous
@@ -278,6 +294,22 @@ PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=ENCODER2_A
 PC7.Locked=true
 PC7.Signal=S_TIM3_CH2
+PC8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC8.GPIO_Label=OLED_SDA
+PC8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC8.GPIO_PuPd=GPIO_NOPULL
+PC8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC8.Locked=true
+PC8.PinState=GPIO_PIN_SET
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC9.GPIO_Label=OLED_SCL
+PC9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC9.GPIO_PuPd=GPIO_NOPULL
+PC9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC9.Locked=true
+PC9.PinState=GPIO_PIN_SET
+PC9.Signal=GPIO_Output
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=ADC_CS
 PD2.Locked=true
@@ -297,10 +329,10 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F401RBTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.2
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.3
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
@@ -312,13 +344,13 @@ ProjectManager.ProjectFileName=Xindabei_v2.ioc
 ProjectManager.ProjectName=Xindabei_v2
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x600
 ProjectManager.TargetToolchain=CMake
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_USART6_UART_Init-USART6-false-HAL-true,14-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_SPI3_Init-SPI3-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_USART6_UART_Init-USART6-false-HAL-true,14-MX_TIM9_Init-TIM9-false-HAL-true,15-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -357,6 +389,8 @@ SH.ADCx_IN12.ConfNb=1
 SH.GPXTI15.0=ADC1_EXTI15
 SH.GPXTI15.1=GPIO_EXTI15
 SH.GPXTI15.ConfNb=2
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
@@ -375,27 +409,37 @@ SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
-SPI1.CalculateBaudRate=42.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=2.625 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI3.CalculateBaudRate=21.0 MBits/s
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI3.CLKPhase=SPI_PHASE_2EDGE
+SPI3.CalculateBaudRate=5.25 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1
+TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Period
+TIM2.Period=6719
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,Prescaler,AutoReloadPreload,Pulse-PWM Generation1 CH1,ClockDivision
-TIM4.Period=65535
+TIM4.Period=6719
 TIM4.Prescaler=0
 TIM4.Pulse-PWM\ Generation1\ CH1=0
+TIM5.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
+TIM5.Period=5000
+TIM5.Prescaler=8
+TIM5.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM9.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM9.IPParameters=Period,AutoReloadPreload,ClockDivision,Prescaler
@@ -409,6 +453,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim11.Mode=TIM11
 VP_SYS_VS_tim11.Signal=SYS_VS_tim11
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 VP_TIM9_VS_ClockSourceINT.Mode=Internal
 VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=custom
