--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -2,8 +2,9 @@
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.Channel-3\#ChannelInjectedConversion=ADC_CHANNEL_11
 ADC1.Channel-4\#ChannelInjectedConversion=ADC_CHANNEL_12
-ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T5_TRGO
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,InjectedRank-3\#ChannelInjectedConversion,Channel-3\#ChannelInjectedConversion,SamplingTime-3\#ChannelInjectedConversion,InjectedOffset-3\#ChannelInjectedConversion,InjectedRank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,InjNumberOfConversion,ExternalTrigInjecConv
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.ExternalTrigInjecConv=ADC_INJECTED_SOFTWARE_START
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,InjectedRank-3\#ChannelInjectedConversion,Channel-3\#ChannelInjectedConversion,SamplingTime-3\#ChannelInjectedConversion,InjectedOffset-3\#ChannelInjectedConversion,InjectedRank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,InjNumberOfConversion,ExternalTrigInjecConv,ExternalTrigConv
 ADC1.InjNumberOfConversion=2
 ADC1.InjectedOffset-3\#ChannelInjectedConversion=0
 ADC1.InjectedOffset-4\#ChannelInjectedConversion=0
@@ -12,7 +13,7 @@ ADC1.InjectedRank-4\#ChannelInjectedConversion=2
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 ADC1.SamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_56CYCLES
 ADC1.master=1
