--- a/Xindabei_v2.ioc
+++ b/Xindabei_v2.ioc
@@ -198,8 +198,9 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=PWM2_A
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=STOP
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
 PA11.Locked=true
@@ -311,8 +312,10 @@ PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=IOUT_2
 PC2.Locked=true
 PC2.Signal=ADCx_IN12
-PC4.GPIOParameters=PinState,GPIO_Label
+PC4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PC4.GPIO_Label=ICM_CS
+PC4.GPIO_PuPd=GPIO_NOPULL
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC4.PinState=GPIO_PIN_SET
 PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -444,17 +447,17 @@ SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=2.625 MBits/s
+SPI1.CalculateBaudRate=10.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI3.CLKPhase=SPI_PHASE_2EDGE
-SPI3.CalculateBaudRate=5.25 MBits/s
+SPI3.CalculateBaudRate=10.5 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
 SPI3.Mode=SPI_MODE_MASTER
